--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-anti-ads",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "React component and hook to detect AdBlock",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -29,15 +29,18 @@
     "url": "https://github.com/rpnjul/react-anti-ads/issues"
   },
   "peerDependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "rollup": "^3.0.0",
+    "rollup-plugin-dts": "^6.2.1",
     "rollup-plugin-typescript2": "^0.34.1",
     "typescript": "^5.0.0"
   }
